[gd_scene load_steps=27 format=3 uid="uid://dqrclftt6ifdh"]

[ext_resource type="Script" path="res://Scenes/Game.gd" id="1_j2yyy"]
[ext_resource type="Texture2D" uid="uid://dfk0ws1apgptm" path="res://Assets/Images/BG/Space.png" id="1_v1fbu"]
[ext_resource type="Shader" path="res://Assets/Shaders/BG.gdshader" id="2_2eayk"]
[ext_resource type="Texture2D" uid="uid://bwnwoy1gx7njq" path="res://Assets/Images/BG/Planets.png" id="2_os2pj"]
[ext_resource type="PackedScene" uid="uid://hkbpptyrwbj3" path="res://Scenes/Objects/Player.tscn" id="6_amtry"]
[ext_resource type="Texture2D" uid="uid://deek3cuchnarj" path="res://Assets/Images/UI/GemDisplayUnderlay.png" id="9_oxoh3"]
[ext_resource type="Texture2D" uid="uid://bf62whfy1x5lv" path="res://Assets/Images/LevelItems/Objects.png" id="10_emdso"]
[ext_resource type="Texture2D" uid="uid://bx37wi66pb6jr" path="res://Assets/Images/UI/LifeCount.png" id="11_wmydn"]
[ext_resource type="FontFile" uid="uid://bcjvcavk6kkgm" path="res://Assets/Fonts/PixelOperatorHB.ttf" id="13_nyblk"]
[ext_resource type="Texture2D" uid="uid://duu6o2e6twup8" path="res://Assets/Images/UI/02Bar.png" id="14_2mnt8"]
[ext_resource type="FontFile" uid="uid://4l6hnm68kiij" path="res://Assets/Fonts/pressstart2p-regular.ttf" id="20_g4nx7"]
[ext_resource type="Shader" path="res://Assets/Shaders/Shine.gdshader" id="20_j5cjc"]
[ext_resource type="Theme" uid="uid://jlefapqly6nh" path="res://Assets/Data/default_theme.theme" id="23_ihvp7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jdk5a"]
shader = ExtResource("2_2eayk")
shader_parameter/strengthX = 0.125
shader_parameter/strengthY = 0.625

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fllwg"]
shader = ExtResource("2_2eayk")
shader_parameter/strengthX = 0.5
shader_parameter/strengthY = 2.5

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_oet62"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1nbhl"]
normal = Vector2(-1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xma0g"]
shader = ExtResource("20_j5cjc")
shader_parameter/shine_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_eecmb"]
atlas = ExtResource("10_emdso")
region = Rect2(0, 0, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_d1gft"]
line_spacing = 0.0
font = ExtResource("20_g4nx7")
font_size = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_ux7sl"]
atlas = ExtResource("14_2mnt8")
region = Rect2(0, 0, 48, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh01r"]
atlas = ExtResource("14_2mnt8")
region = Rect2(0, 8, 48, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0860p"]
atlas = ExtResource("11_wmydn")
region = Rect2(0, 18, 65, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1as8"]
atlas = ExtResource("11_wmydn")
region = Rect2(0, 0, 65, 18)

[sub_resource type="LabelSettings" id="LabelSettings_sm50n"]
font = ExtResource("20_g4nx7")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_tp2pt"]
font = ExtResource("13_nyblk")
font_size = 32
font_color = Color(0.960784, 1, 0.909804, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_j2yyy")
metadata/_edit_horizontal_guides_ = []
metadata/_edit_vertical_guides_ = []

[node name="BG" type="CanvasLayer" parent="."]
layer = -100

[node name="Space" type="Sprite2D" parent="BG"]
material = SubResource("ShaderMaterial_jdk5a")
texture = ExtResource("1_v1fbu")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 416, 240)

[node name="Planets" type="Sprite2D" parent="BG"]
material = SubResource("ShaderMaterial_fllwg")
texture = ExtResource("2_os2pj")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 416, 240)

[node name="Barriers" type="StaticBody2D" parent="."]

[node name="Left" type="CollisionShape2D" parent="Barriers"]
shape = SubResource("WorldBoundaryShape2D_oet62")

[node name="Right" type="CollisionShape2D" parent="Barriers"]
position = Vector2(416, 0)
shape = SubResource("WorldBoundaryShape2D_1nbhl")

[node name="Player" parent="." instance=ExtResource("6_amtry")]
position = Vector2(72, 192)

[node name="UI" type="CanvasLayer" parent="."]

[node name="GemUnder" type="Sprite2D" parent="UI"]
position = Vector2(14, 32)
texture = ExtResource("9_oxoh3")
centered = false

[node name="GemOver" type="Sprite2D" parent="UI"]
material = SubResource("ShaderMaterial_xma0g")
position = Vector2(21, 40)
texture = SubResource("AtlasTexture_eecmb")

[node name="GemCount" type="Label" parent="UI"]
offset_left = 33.0
offset_top = 38.0
offset_right = 41.0
offset_bottom = 46.0
theme = ExtResource("23_ihvp7")
text = "0"
label_settings = SubResource("LabelSettings_d1gft")

[node name="O2Bar" type="TextureProgressBar" parent="UI"]
offset_left = 29.0
offset_top = 54.0
offset_right = 77.0
offset_bottom = 62.0
max_value = 24.0
step = 0.01
value = 24.0
texture_under = SubResource("AtlasTexture_ux7sl")
texture_progress = SubResource("AtlasTexture_nh01r")

[node name="LifesBar" type="TextureProgressBar" parent="UI"]
offset_left = 13.0
offset_top = 12.0
offset_right = 78.0
offset_bottom = 30.0
max_value = 5.0
value = 3.0
texture_under = SubResource("AtlasTexture_0860p")
texture_progress = SubResource("AtlasTexture_v1as8")

[node name="Score" type="Label" parent="UI"]
offset_left = 331.0
offset_top = 16.0
offset_right = 395.0
offset_bottom = 27.0
text = "00000000"
label_settings = SubResource("LabelSettings_sm50n")
horizontal_alignment = 2

[node name="ColorRect" type="ColorRect" parent="UI"]
visible = false
offset_right = 416.0
offset_bottom = 240.0
color = Color(0.0784314, 0.0941176, 0.180392, 1)

[node name="Label" type="Label" parent="UI/ColorRect"]
layout_mode = 0
offset_left = 128.0
offset_top = 101.0
offset_right = 266.0
offset_bottom = 136.0
text = "Game Over"
label_settings = SubResource("LabelSettings_tp2pt")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(75, 184)
limit_left = 0
limit_bottom = 240
position_smoothing_enabled = true
position_smoothing_speed = 4.0
